// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> Bottom story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:rh:"
    aria-expanded="true"
    class="button button--lg button--secondary button--brand"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:rf:"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:rg:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> BottomEnd story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:r1a:"
    aria-expanded="true"
    class="button button--lg button--secondary button--brand"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:r18:"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r19:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> BottomStart story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:r15:"
    aria-expanded="true"
    class="button button--lg button--secondary button--brand"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:r13:"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r14:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> Default story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:r2:"
    aria-expanded="true"
    class="button button--lg button--secondary button--brand"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:r0:"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r1:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> FocusClickableElement story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:r23:"
    aria-expanded="true"
    class="button button--lg button--secondary button--brand"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:r21:"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r22:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> Left story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:rm:"
    aria-expanded="true"
    class="button button--lg button--secondary button--brand"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:rk:"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:rl:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> LeftEnd story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:r1u:"
    aria-expanded="true"
    class="button button--lg button--secondary button--brand"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:r1s:"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r1t:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> LeftStart story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:r1p:"
    aria-expanded="true"
    class="button button--lg button--secondary button--brand"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:r1n:"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r1o:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> Right story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:rc:"
    aria-expanded="true"
    class="button button--lg button--secondary button--brand"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:ra:"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:rb:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> RightEnd story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:r1k:"
    aria-expanded="true"
    class="button button--lg button--secondary button--brand"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:r1i:"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r1j:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> RightStart story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:r1f:"
    aria-expanded="true"
    class="button button--lg button--secondary button--brand"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:r1d:"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r1e:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> Top story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:r7:"
    aria-expanded="true"
    class="button button--lg button--secondary button--brand"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:r5:"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r6:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> TopEnd story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:r10:"
    aria-expanded="true"
    class="button button--lg button--secondary button--brand"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:ru:"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:rv:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> TopStart story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:rr:"
    aria-expanded="true"
    class="button button--lg button--secondary button--brand"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:rp:"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:rq:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;
